--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,21 @@
 # Site settings
-title: HiQDev
-email: team@hiqdev.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://hiqdev.com" # the base hostname & protocol for your site
-twitter_username: hiqsol
-github_username:  hiqdev
-higlighter: pygments
+title:              HiQDev
+tagline:            We're developing HiPanel and HiDev
+email:              team@hiqdev.com
+description:        We're developing <a href="http://hipanel.com/">HiPanel</a> and HiDev
+baseurl:            /
+url:                http://hiqdev.com
+twitter_username:   hiqsol
+github_username:    hiqdev
+higlighter:         pygments
+markdown:           redcarpet
 
-# Build settings
-markdown: kramdown
+# Permalinks
+permalink:          pretty
+relative_permalinks: true
+
+author:
+  name:           Andrii Vasyliev
+  url:            http://solex.me/
+
+paginate:         5
