--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,10 @@ url:                http://hiqdev.com
 twitter_username:   hiqsol
 github_username:    hiqdev
 higlighter:         pygments
+
 markdown:           redcarpet
+kramdown:
+    input: GFM
 
 # Permalinks
 permalink:          pretty
