--- a/.hidev/config.yml
+++ b/.hidev/config.yml
@@ -5,5 +5,8 @@ package:
     title:          HiQDev site
     keywords:       hiqdev, development
 
+vendor:
+    name: hiqdev
+
 require:
     hiqdev/hidev-hiqdev: "*"
