--- a/.hidev/config.yml
+++ b/.hidev/config.yml
@@ -5,8 +5,6 @@ package:
     title:          HiQDev site
     keywords:       hiqdev, development
 
-vendor:
-    name: hiqdev
-
 require:
-    hiqdev/hidev-hiqdev: "*"
+    hiqdev/hidev-vendor: "*"
+    hiqdev/hidev-php:    "*"
