--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,11 @@ matrix:
 cache:
     directories:
         - $HOME/.composer/cache
+before_install:
+    - 'composer self-update'
 sudo: false
 install:
     - 'wget http://hiqdev.com/hidev/hidev.phar && chmod a+x hidev.phar'
-    - 'travis_retry composer global require "fabpot/php-cs-fixer:*" "phpunit/phpunit-skeleton-generator:*" "phpunit/phpunit:^4.8"'
     - 'travis_retry composer install --no-interaction'
     - './hidev.phar travis/install'
 script:
