--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,16 @@
 
 # IDE & OS files
 .*.swp
-.idea
-nbproject
+.DS_Store
 .buildpath
+.idea
 .project
 .settings
 Thumbs.db
-.DS_Store
+nbproject
+
+# php-cs-fixer cache
+.php_cs.cache
 
 # vendor dirs
 vendor
@@ -22,12 +25,14 @@ composer.lock
 # phpunit generated files
 coverage.clover
 
+# PHARs
+composer.phar
+php-cs-fixer.phar
+phpunit.phar
+
 # Codeception generated files
 tests/_support/_generated
 
-# php-cs-fixer cache
-.php_cs.cache
-
 # jekyll site
-_site
 .sass-cache
+_site
