--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hiqdev/hiqdev.github.io",
     "type": "project",
-    "description": "HiQDev site",
+    "description": "HiQDev.com site",
     "keywords": [
         "hiqdev",
         "development"
