renamed require -> plugins in `.hidev/config.yml`

--- a/.hidev/config.yml
+++ b/.hidev/config.yml
@@ -4,6 +4,6 @@ package:
     title:          HiQDev.com
     keywords:       hiqdev, development
 
-require:
+plugins:
     hiqdev/hidev-php:    "*"
     hiqdev/hidev-vendor: "*"
